Add apikey and appid secrets/env variables, add ApplicationInsightsClient to container

--- a/packages/resource-deployment/.env.template
+++ b/packages/resource-deployment/.env.template
@@ -13,6 +13,7 @@ COMMON_VARIABLES=
 AZURE_STORAGE_SCAN_QUEUE=scanrequest
 KEY_VAULT_URL=
 APPINSIGHTS_INSTRUMENTATIONKEY=
+APPINSIGHTS_APPID=
 
 COSMOS_DB_URL=
 COSMOS_DB_KEY=
