Sender queue size generator related changes

--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -58,6 +58,7 @@
         "logger": "1.0.0",
         "pretty-format": "^24.7.0",
         "reflect-metadata": "^0.1.13",
-        "verror": "^1.10.0"
+        "verror": "^1.10.0",
+        "storage-documents": "1.0.0"
     }
 }
