--- a/packages/web-api-scan-request-sender/package.json
+++ b/packages/web-api-scan-request-sender/package.json
@@ -46,6 +46,7 @@
         "logger": "1.0.0",
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
-        "storage-documents": "1.0.0"
+        "storage-documents": "1.0.0",
+        "moment": "^2.22.2"
     }
 }
