--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,6 +34,7 @@
         "jest": "^24.9.0",
         "jest-circus": "^24.9.0",
         "jest-junit": "^8.0.0",
+        "mockdate": "^2.0.5",
         "rimraf": "^2.6.3",
         "ts-jest": "^24.0.2",
         "tslint": "^5.12.1",
