Fix build issues with merge

--- a/packages/resource-deployment/runtime-config/runtime-config.ppe.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.ppe.json
@@ -19,6 +19,6 @@
         "scanRequestProcessingDelayInSeconds": 300
     },
     "AvailabilityTestConfig": {
-        "testEnv": "canary"
+        "testEnv": "insider"
     }
 }
