fix service config files

--- a/packages/resource-deployment/runtime-config/runtime-config.prod.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.prod.json
@@ -18,7 +18,7 @@
     "restApiConfig": {
         "scanRequestProcessingDelayInSeconds": 300
     },
-    "AvailabilityTestConfig": {
+    "availabilityTestConfig": {
         "testEnv": "production"
     }
 }
