--- a/packages/resource-deployment/runtime-config/runtime-config.selftest.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.selftest.json
@@ -17,7 +17,7 @@
     "restApiConfig": {
         "scanRequestProcessingDelayInSeconds": 300
     },
-    "AvailabilityTestConfig": {
+    "availabilityTestConfig": {
         "testEnv": "canary"
     }
 }
