--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -26,6 +26,7 @@
         "@types/lodash": "^4.14.136",
         "@types/verror": "^1.10.3",
         "@types/yargs": "^12.0.9",
+        "@types/request": "^2.47.0",
         "copy-webpack-plugin": "^4.6.0",
         "fork-ts-checker-webpack-plugin": "^0.5.2",
         "jest": "^24.9.0",
