--- a/packages/web-api/package.json
+++ b/packages/web-api/package.json
@@ -32,6 +32,7 @@
         "@types/sha.js": "^2.4.0",
         "@types/verror": "^1.10.3",
         "@types/yargs": "^12.0.9",
+        "@types/request": "^2.47.0",
         "copy-webpack-plugin": "^4.6.0",
         "fork-ts-checker-webpack-plugin": "^0.5.2",
         "jest": "^24.9.0",
@@ -57,6 +58,8 @@
         "logger": "1.0.0",
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
-        "storage-documents": "1.0.0"
+        "storage-documents": "1.0.0",
+        "request": "^2.88.0",
+        "functional-tests": "1.0.0"
     }
 }
