Run functional tests in orchestrator (#454)
* Add build/release version to environment

* Move version update to new script

* Add runFunctionalTests activity action

* run multiple test groups in orchestrator, fix tests

* Add test env to service config

* Fix build issues with merge

* remove FunctionalTestGroupFactory and use constructors instead

* return to functionalTestFactory

* Fix issues with logger and test function context

* update snapshot

* fix service config files

* Fixed failing tests, remove redundant tests and rearrange for single-responsibility test groups, run tests in order in orchestrator

* Alternative to functional test factory class

* Remove unused code

* remove releaseId as base logger property

Co-authored-by: Liu Haonan <haonliu@microsoft.com>

--- a/packages/resource-deployment/runtime-config/runtime-config.selftest.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.selftest.json
@@ -16,5 +16,8 @@
     },
     "restApiConfig": {
         "scanRequestProcessingDelayInSeconds": 300
+    },
+    "availabilityTestConfig": {
+        "testEnv": "canary"
     }
 }
