--- a/packages/resource-deployment/runtime-config/runtime-config.prod.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.prod.json
@@ -17,5 +17,8 @@
     },
     "restApiConfig": {
         "scanRequestProcessingDelayInSeconds": 300
+    },
+    "availabilityTestConfig": {
+        "testEnv": "production"
     }
 }
