Add run id to the orchestration

--- a/packages/resource-deployment/runtime-config/runtime-config.prod.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.prod.json
@@ -19,6 +19,6 @@
         "scanRequestProcessingDelayInSeconds": 300
     },
     "availabilityTestConfig": {
-        "testEnv": "production"
+        "environmentDefinition": "production"
     }
 }
