--- a/packages/resource-deployment/runtime-config/runtime-config.selftest.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.selftest.json
@@ -18,6 +18,6 @@
         "scanRequestProcessingDelayInSeconds": 300
     },
     "availabilityTestConfig": {
-        "testEnv": "canary"
+        "environmentDefinition": "canary"
     }
 }
