--- a/packages/resource-deployment/runtime-config/runtime-config.ppe.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.ppe.json
@@ -19,6 +19,6 @@
         "scanRequestProcessingDelayInSeconds": 300
     },
     "availabilityTestConfig": {
-        "testEnv": "insider"
+        "environmentDefinition": "insider"
     }
 }
