Add release version to function app template

--- a/packages/resource-deployment/templates/function-web-workers-app-template.json
+++ b/packages/resource-deployment/templates/function-web-workers-app-template.json
@@ -110,6 +110,10 @@
                         {
                             "name": "WEB_API_BASE_URL",
                             "value": "[parameters('webApiBaseUrl')]"
+                        },
+                        {
+                            "name": "RELEASE_VERSION",
+                            "value": "%RELEASE_VERSION_NUMBER%"
                         }
                     ]
                 }
