--- a/packages/resource-deployment/templates/function-web-api-app-template.json
+++ b/packages/resource-deployment/templates/function-web-api-app-template.json
@@ -113,6 +113,10 @@
                         {
                             "name": "KEY_VAULT_URL",
                             "value": "[concat('https://', parameters('keyVaultName'), '.vault.azure.net/')]"
+                        },
+                        {
+                            "name": "RELEASE_VERSION",
+                            "value": "%RELEASE_VERSION_NUMBER%"
                         }
                     ]
                 }
