--- a/packages/resource-deployment/templates/function-web-workers-app-template.json
+++ b/packages/resource-deployment/templates/function-web-workers-app-template.json
@@ -56,6 +56,12 @@
             "metadata": {
                 "description": "Base url of the web api"
             }
+        },
+        "releaseVersion": {
+            "type": "string",
+            "metadata": {
+                "description": "Release version number"
+            }
         }
     },
     "resources": [
@@ -113,7 +119,7 @@
                         },
                         {
                             "name": "RELEASE_VERSION",
-                            "value": "%RELEASE_VERSION_NUMBER%"
+                            "value": "[parameters('releaseVersion')]"
                         }
                     ]
                 }
