--- a/packages/web-api-scan-job-manager/package.json
+++ b/packages/web-api-scan-job-manager/package.json
@@ -54,7 +54,6 @@
         "moment": "^2.22.2",
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
-        "verror": "^1.10.0",
-        "storage-documents": "1.0.0"
+        "verror": "^1.10.0"
     }
 }
