--- a/packages/cli/.vscode/tasks.json
+++ b/packages/cli/.vscode/tasks.json
@@ -4,10 +4,10 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "tsc",
-            "command": "tsc",
+            "label": "build",
+            "command": "yarn build",
             "isShellCommand": true,
-            "showOutput": "silent",
+            "showOutput": "always",
             "args": [],
             "problemMatcher": ["$tsc"]
         }
