--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,11 +1,14 @@
 {
     "name": "accessibility-insights-scan",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
         "build": "webpack --config ./webpack.config.js --colors",
         "cbuild": "npm-run-all --serial clean build",
-        "clean": "rimraf dist test-results",
+        "pack": "npm-run-all --serial create-drop-dir pack-to-drop-dir",
+        "pack-to-drop-dir": "yarn pack --filename drop/cli.tgz",
+        "create-drop-dir": "npx mkdirp drop",
+        "clean": "rimraf dist drop test-results",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
         "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
         "test": "jest --coverage --colors"
@@ -34,16 +37,17 @@
         "jest": "^24.9.0",
         "jest-circus": "^24.9.0",
         "jest-junit": "^8.0.0",
+        "mkdirp": "^0.5.1",
         "mockdate": "^2.0.5",
         "rimraf": "^2.6.3",
+        "shebang-loader": "^0.0.1",
         "ts-jest": "^24.0.2",
         "tslint": "^5.12.1",
         "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
         "typescript": "^3.6.2",
         "webpack": "^4.29.4",
-        "webpack-cli": "^3.2.3",
-        "shebang-loader": "^0.0.1"
+        "webpack-cli": "^3.2.3"
     },
     "dependencies": {
         "dotenv": "^6.2.0",
@@ -55,6 +59,8 @@
         "puppeteer": "^1.12.2",
         "axe-core": "3.3.2",
         "axe-puppeteer": "^1.0.0",
+        "cli-spinner": "^0.2.10",
+        "dotenv": "^6.2.0",
         "filenamify-url": "2.1.0",
         "cli-spinner": "^0.2.10",
         "react-helmet": "^5.2.0"
