updating contracts file

--- a/packages/api-contracts/ai-scan-api.yaml
+++ b/packages/api-contracts/ai-scan-api.yaml
@@ -293,12 +293,13 @@ components:
                         - UrlNavigationTimeout
                         - HttpErrorCode
                         - SslError
-                        - MainResourceLoadFailure
+                        - ResourceLoadFailure
                         - InvalidUrl
                         - EmptyPage
                         - NavigationError
                         - InvalidContentType
                         - UrlNotResolved
+                        - ScanTimeout
                 codeId:
                     type: integer
                     format: int32
