--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "build": "npx lerna run build --stream",
         "pack": "npx lerna run pack --stream",
         "test": "npx jest",
+        "test:e2e": "npx jest functional-tests.local.spec.ts",
         "lint": "npx lerna run lint --stream",
         "lint:fix": "tslint --fix -c ./tslint.json -p ./tsconfig.base.json --force",
         "precheckin": "npm-run-all --serial format build lint test copyright-check",
