--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -41,7 +41,12 @@ jobs:
     - name: install
       uses: ianwalter/puppeteer@v2.0.0
       with:
-          args: cd /packages/cli && yarn install
+          args: yarn install
+    
+    - name: install
+      uses: ianwalter/puppeteer@v2.0.0
+      with:
+          args: yarn teste2e
           
 #     - name: check formatting
 #       run: yarn format-check
