--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,7 +9,11 @@
         "noImplicitReturns": true,
         "resolveJsonModule": true,
         "sourceMap": true,
-        "declaration": true
+        "declaration": true,
+        "types": [
+            "reflect-metadata",
+            "@types/jest",
+        ],
     },
     "awesomeTypescriptLoaderOptions": {
         "usePrecompiledFiles": true,
