--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "build": "npx lerna run build --stream",
         "pack": "npx lerna run pack --stream",
         "test": "npx jest",
+        "publish-code-coverage": "npx codecov",
         "test:e2e": "npx jest functional-tests.local.spec.ts",
         "lint": "npx lerna run lint --stream",
         "lint:fix": "tslint --fix -c ./tslint.json -p ./tsconfig.base.json --force",
@@ -27,6 +28,7 @@
         "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
     },
     "devDependencies": {
+        "codecov": "^3.6.5",
         "jest": "^24.7.1",
         "jest-circus": "^24.7.1",
         "jest-extended": "^0.11.2",
