--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,13 +1,10 @@
 {
     "extends": "../../tsconfig.base.json",
-    "lib": [
-        "es6",
-        "dom"
-    ],
+    "lib": ["es6", "dom"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "compilerOptions": {
         "outDir": "dist",
         "declaration": false
-    },
+    }
 }
