--- a/packages/cli/tsconfig.sdk.json
+++ b/packages/cli/tsconfig.sdk.json
@@ -2,9 +2,7 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "dist",
-        "declaration": true,
+        "declaration": true
     },
-    "include": [
-        "./src/index.ts"
-    ],
+    "include": ["./src/index.ts"]
 }
