feat: adding support to invoke via nodejs apps (#506)
* feat: adding support to invoke via nodejs apps

* chore: using ts-loader instead of awesome-typescript-loader

* fix formatting

* fix build failure

* fix lint error

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,7 +9,8 @@
         "noImplicitReturns": true,
         "resolveJsonModule": true,
         "sourceMap": true,
-        "declaration": true
+        "declaration": true,
+        "types": ["reflect-metadata", "@types/jest"]
     },
     "awesomeTypescriptLoaderOptions": {
         "usePrecompiledFiles": true,
