--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "extends": "../../tsconfig.base.json",
     "lib": ["es6", "dom"],
-    "types": ["reflect-metadata"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "compilerOptions": {
-        "outDir": "dist"
+        "outDir": "dist",
+        "declaration": false
     }
 }
