make process.exit configurable

--- a/packages/resource-deployment/runtime-config/runtime-config.prod.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.prod.json
@@ -6,7 +6,8 @@
         "maxQueueSize": 20
     },
     "taskConfig": {
-        "taskTimeoutInMinutes": 5
+        "taskTimeoutInMinutes": 5,
+        "exitOnComplete": true
     },
 
     "scanConfig": {
