--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -25,6 +25,7 @@
         "@types/convict": "^4.2.1",
         "@types/jest": "^24.0.11",
         "@types/node": "^11.13.4",
+        "@types/wtfnode": "^0.7.0",
         "@types/sha.js": "^2.4.0",
         "jest": "^24.9.0",
         "jest-circus": "^24.9.0",
@@ -43,6 +44,7 @@
         "lodash": "^4.17.14",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
-        "uuid-with-v6": "^1.1.2"
+        "uuid-with-v6": "^1.1.2",
+        "wtfnode": "^0.8.1"
     }
 }
