--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
         "test": "npx jest",
         "publish-code-coverage": "npx codecov",
         "test:e2e": "npx jest functional-tests.local.spec.ts",
-        "lint": "npx lerna run lint --stream",
-        "lint:fix": "tslint --fix -c ./tslint.json -p ./tsconfig.base.json --force",
-        "precheckin": "npm-run-all --serial format build lint test copyright-check",
-        "format": "npx prettier --write \"**/*\"",
-        "format-check": "npx prettier --check \"**/*\"",
-        "copyright-check": "license-check-and-add"
+        "lint:check": "npx lerna run lint --stream",
+        "lint:fix": "npx lerna run lint:fix --stream",
+        "precheckin": "npm-run-all --serial format:check build lint:check test copyright:check",
+        "format:fix": "npx prettier --write \"**/*\"",
+        "format:check": "npx prettier --check \"**/*\"",
+        "copyright:check": "license-check-and-add check -f ./license-check-and-add-config.json",
+        "copyright:fix": "license-check-and-add add -f ./license-check-and-add-config.json"
     },
     "author": "Microsoft",
     "license": "MIT",
@@ -34,7 +35,7 @@
         "jest-extended": "^0.11.2",
         "jest-junit": "^6.3.0",
         "lerna": "^3.18.4",
-        "license-check-and-add": "^2.3.6",
+        "license-check-and-add": "^3.0.4",
         "npm-run-all": "^4.1.5",
         "prettier": "1.16.4",
         "tslint": "^5.12.1",
@@ -46,110 +47,6 @@
         "packages": [
             "packages/*"
         ]
-    },
-    "license-check-and-add-config": {
-        "folder": "./",
-        "license": "copyright-header.txt",
-        "exact_paths_method": "EXCLUDE",
-        "exact_paths": [
-            "./.git",
-            "./.github",
-            "./.vscode",
-            "./node_modules",
-            "./test-results",
-            "./copyright-header.txt",
-            "./packages/job-manager/dist",
-            "./packages/job-manager/node_modules",
-            "./packages/job-manager/test-results",
-            "./packages/logger/dist",
-            "./packages/logger/node_modules",
-            "./packages/logger/test-results",
-            "./packages/runner/dist",
-            "./packages/runner/node_modules",
-            "./packages/runner/test-results",
-            "./packages/scanner/dist",
-            "./packages/scanner/node_modules",
-            "./packages/scanner/test-results",
-            "./packages/azure-services/dist",
-            "./packages/azure-services/node_modules",
-            "./packages/azure-services/test-results",
-            "./packages/scan-request-sender/dist",
-            "./packages/scan-request-sender/node_modules",
-            "./packages/scan-request-sender/test-results",
-            "./packages/web-api-scan-request-sender/dist",
-            "./packages/web-api-scan-request-sender/node_modules",
-            "./packages/web-api-scan-request-sender/test-results",
-            "./packages/web-api-scan-job-manager/dist",
-            "./packages/web-api-scan-job-manager/node_modules",
-            "./packages/web-api-scan-job-manager/test-results",
-            "./packages/web-api-scan-runner/dist",
-            "./packages/web-api-scan-runner/node_modules",
-            "./packages/web-api-scan-runner/test-results",
-            "./packages/azure-client/dist",
-            "./packages/azure-client/node_modules",
-            "./packages/azure-client/test-results",
-            "./packages/crawler/dist",
-            "./packages/crawler/node_modules",
-            "./packages/crawler/test-results",
-            "./packages/runtime-config-provider/dist",
-            "./packages/runtime-config-provider/node_modules",
-            "./packages/runtime-config-provider/test-results",
-            "./packages/storage-documents/dist",
-            "./packages/storage-documents/node_modules",
-            "./packages/storage-documents/test-results",
-            "./packages/service-library/dist",
-            "./packages/service-library/node_modules",
-            "./packages/service-library/test-results",
-            "./packages/common/dist",
-            "./packages/common/node_modules",
-            "./packages/common/test-results",
-            "./packages/resource-deployment/dist",
-            "./packages/web-api/dist",
-            "./packages/web-api/node_modules",
-            "./packages/web-api/test-results",
-            "./packages/web-workers/dist",
-            "./packages/web-workers/node_modules",
-            "./packages/web-workers/test-results",
-            "./packages/web-api-client/dist",
-            "./packages/web-api-client/node_modules",
-            "./packages/web-api-client/test-results",
-            "./packages/functional-tests/dist",
-            "./packages/functional-tests/node_modules",
-            "./packages/functional-tests/test-results",
-            "./packages/cli/dist",
-            "./packages/cli/node_modules",
-            "./packages/cli/test-results",
-            "./packages/health-client/dist",
-            "./packages/health-client/node_modules",
-            "./packages/health-client/test-results"
-        ],
-        "file_type_method": "INCLUDE",
-        "file_types": [
-            ".ts",
-            ".d.ts",
-            ".js",
-            ".yaml",
-            ".md",
-            ".xml",
-            ".sh"
-        ],
-        "insert_license": false,
-        "license_formats": {
-            "yaml|npmrc|sh": {
-                "eachLine": {
-                    "prepend": "# "
-                }
-            },
-            "md": {
-                "prepend": "<!--",
-                "append": "-->"
-            },
-            "ts|d.ts|js": {
-                "eachLine": {
-                    "prepend": "// "
-                }
-            }
-        }
     },
     "resolutions": {
         "jquery": "^3.4.1",
