--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -16,3 +16,13 @@ update_configs:
                 # on false positives and breaking ai-web, so avoiding
                 # dependabot auto-update for them like other deps.
                 dependency_name: 'axe-core'
+
+    - package_manager: 'dotnet:nuget'
+      directory: '/'
+      update_schedule: 'daily'
+      default_labels:
+          - 'category: engineering'
+          - 'dependencies'
+      commit_message:
+          prefix: 'chore'
+          include_scope: true
