Add Logger to A11yServiceCredential and log getToken failures

--- a/packages/health-client/package.json
+++ b/packages/health-client/package.json
@@ -41,6 +41,7 @@
         "service-library": "1.0.0",
         "web-api-client": "1.0.0",
         "functional-tests": "1.0.0",
+        "logger": "1.0.0",
         "chai": "^4.2.0",
         "yargs": "15.1.0"
     }
