--- a/packages/web-api-client/package.json
+++ b/packages/web-api-client/package.json
@@ -42,6 +42,7 @@
         "service-library": "1.0.0",
         "request-promise": "^4.2.4",
         "adal-node": "0.2.1",
-        "request": "^2.88.0"
+        "request": "^2.88.0",
+        "logger": "1.0.0"
     }
 }
