--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
         "jest": "^25.1.0",
         "jest-circus": "^25.1.0",
         "jest-extended": "^0.11.2",
+        "jest-html-reporter": "^2.8.0",
         "jest-junit": "^10.0.0",
+        "jest-slow-test-reporter": "^1.0.0",
         "lerna": "^3.18.4",
         "license-check-and-add": "^3.0.4",
         "npm-run-all": "^4.1.5",
