--- a/build.yaml
+++ b/build.yaml
@@ -62,8 +62,10 @@ steps:
           Contents: |
               job-manager/dist/**/*
               web-api-scan-job-manager/dist/**/*
+              web-api-send-notification-job-manager/dist/**/*
               runner/dist/**/*
               web-api-scan-runner/dist/**/*
+              web-api-send-notification-runner/dist/**/*
               scan-request-sender/dist/**/*
               web-api-scan-request-sender/dist/**/*
               resource-deployment/dist/**/*
