--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "axe-core": "3.5.1",
         "lodash": "^4.17.14",
         "https-proxy-agent": "^3.0.1",
-        "serialize-javascript": "^2.1.1"
+        "serialize-javascript": "^2.1.1",
+        "minimist": "^1.2.2"
     }
 }
