--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -41,7 +41,8 @@
         "typemoq": "^2.1.0",
         "typescript": "^3.8.3",
         "webpack": "^4.42.0",
-        "webpack-cli": "^3.2.3"
+        "webpack-cli": "^3.2.3",
+        "mockdate": "^2.0.5"
     },
     "dependencies": {
         "@azure/batch": "^7.0.0",
