--- a/packages/resource-deployment/runtime-config/runtime-config.prod.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.prod.json
@@ -14,7 +14,8 @@
         "minLastReferenceSeenInDays": 3,
         "pageRescanIntervalInDays": 3,
         "failedPageRescanIntervalInHours": 3,
-        "maxScanRetryCount": 3
+        "maxScanRetryCount": 3,
+        "maxSendNotificationRetryCount": 3
     },
     "restApiConfig": {
         "scanRequestProcessingDelayInSeconds": 300
