--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "lodash": "^4.17.14",
         "https-proxy-agent": "^3.0.1",
         "serialize-javascript": "^2.1.1",
-        "minimist": "^1.2.2"
+        "minimist": "^1.2.2",
+        "dot-prop": "^5.2.0"
     }
 }
