--- a/packages/resource-deployment/.env.template
+++ b/packages/resource-deployment/.env.template
@@ -11,6 +11,7 @@ QUEUE_SIZE=10
 
 COMMON_VARIABLES=
 AZURE_STORAGE_SCAN_QUEUE=scanrequest
+AZURE_STORAGE_NOTIFICATION_QUEUE=ondemand-send-notification
 KEY_VAULT_URL=
 APPINSIGHTS_INSTRUMENTATIONKEY=
 APPINSIGHTS_APPID=
