--- a/packages/web-api-send-notification-runner/.vscode/launch.json
+++ b/packages/web-api-send-notification-runner/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Start debugging web-api-scan-runner",
+            "name": "Start debugging web-api-send-notification-runner",
             "type": "node",
             "request": "launch",
             "outFiles": ["${workspaceFolder}/dist/**/*.js"],
