--- a/packages/resource-deployment/runtime-config/runtime-config.ppe.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.ppe.json
@@ -1,6 +1,6 @@
 {
     "featureFlags": {
-        "sendNotification": false
+        "sendNotification": true
     },
     "logConfig": {
         "logInConsole": true
@@ -16,8 +16,7 @@
         "minLastReferenceSeenInDays": 3,
         "pageRescanIntervalInDays": 3,
         "failedPageRescanIntervalInHours": 3,
-        "maxScanRetryCount": 3,
-        "maxSendNotificationRetryCount": 3
+        "maxScanRetryCount": 3
     },
     "restApiConfig": {
         "scanRequestProcessingDelayInSeconds": 300
