fix: removing unused variables Enabled tsconfig option nounusedLocals to catch these issues

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,6 +6,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "noImplicitAny": true,
+        "noUnusedLocals": true,
         "noImplicitReturns": true,
         "resolveJsonModule": true,
         "sourceMap": true,
