--- a/build.yaml
+++ b/build.yaml
@@ -2,89 +2,17 @@
 # Licensed under the MIT License.
 name: $(Build.SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
 
-pool:
-    vmImage: 'Ubuntu-16.04'
-    demands: npm
+jobs:
+    - job: 'BuildArtifacts'
+      pool:
+          vmImage: 'ubuntu-16.04'
+          demands: npm
+      steps:
+          - template: ./azure-pipeline/build-artifacts-job-steps.yaml
 
-steps:
-    - task: NodeTool@0
-      inputs:
-          versionSpec: 10.x
-      displayName: 'Use Node 10.x'
-
-    - script: |
-          yarn install --frozen-lockfile
-      displayName: 'install dependencies'
-
-    - script: |
-          yarn format:check
-      displayName: check code formatting
-
-    - script: |
-          yarn copyright:check
-      displayName: check for copyright headers
-
-    - script: |
-          yarn clean
-      displayName: clean
-
-    - script: |
-          # 1st '--' needed for yarn since, yarn won't pass the first argument if it is --; 2nd '--' lets lerna to pass on anything after this as args;
-          yarn build -- -- --env.version=$(Build.BuildId)
-      displayName: build
-
-    - script: |
-          yarn lint:check
-      displayName: run linter
-
-    - script: |
-          export NODE_OPTIONS=--max_old_space_size=4096
-          yarn test --ci --coverage
-      displayName: run unit tests
-
-    - task: PublishTestResults@2
-      inputs:
-          testResultsFiles: $(System.DefaultWorkingDirectory)/test-results/unit/junit.xml
-          testRunTitle: $(Agent.JobName)
-      condition: always()
-      displayName: publish test results
-
-    - script: yarn publish-code-coverage -t $(CODECOV_TOKEN)
-      displayName: Publish code coverage to codecov
-
-    - script: |
-          yarn run pack
-      displayName: create npm package zips
-
-    - task: CopyFiles@2
-      inputs:
-          SourceFolder: packages
-          Contents: |
-              web-api-scan-job-manager/dist/**/*
-              web-api-send-notification-job-manager/dist/**/*
-              web-api-scan-runner/dist/**/*
-              web-api-send-notification-runner/dist/**/*
-              web-api-scan-request-sender/dist/**/*
-              resource-deployment/dist/**/*
-              web-api/dist/**/*
-              web-workers/dist/**/*
-              functional-tests/dist/**/*
-              health-client/dist/**/*
-              cli/drop/*
-              !**/node_modules/**/*
-              !**/.vscode/**/*
-              !**/*.md
-          TargetFolder: '$(Build.ArtifactStagingDirectory)'
-      displayName: 'Copy Files to staging directory'
-
-    - task: PublishBuildArtifacts@1
-      inputs:
-          pathtoPublish: '$(Build.ArtifactStagingDirectory)'
-          artifactName: drop
-      displayName: 'Publish build artifacts'
-
-    - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
-      displayName: 'Component Detection'
-      inputs:
-          failOnAlert: true
-      condition: in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI')
+    - job: 'Test'
+      pool:
+          vmImage: 'ubuntu-16.04'
+          demands: npm
+      steps:
+          - template: ./azure-pipeline/test-job-steps.yaml
